cf_analysis_results/checkerframework_3.42.0_results/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8.txt
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/CustomFct.java:45: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(args[0]) $$ java.io.FileInputStream $$ regular method exit $$ ( 1460, 1488 ) $$ @MustCall method close may not have been invoked on new FileInputStream(args[0]) or any of its aliases.
        p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
                                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/NextPage.java:19: error: (required.method.not.called) $$ 4 $$ method close $$ taos $$ Demo.TextAreaOutputStream $$ regular method exit $$ ( 422, 492 ) $$ @MustCall method close may not have been invoked on taos or any of its aliases.
		TextAreaOutputStream taos = new TextAreaOutputStream(tAout, "Output");
		                     ^
  The type of object is: Demo.TextAreaOutputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/PreparedDemo.java:42: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(args[0]) $$ java.io.FileInputStream $$ regular method exit $$ ( 1187, 1215 ) $$ @MustCall method close may not have been invoked on new FileInputStream(args[0]) or any of its aliases.
        p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
                                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/MDemo.java:69: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(args[0]) $$ java.io.FileInputStream $$ regular method exit $$ ( 2074, 2102 ) $$ @MustCall method close may not have been invoked on new FileInputStream(args[0]) or any of its aliases.
				p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
				                                      ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/MDemo.java:109: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(table.getTable() + ".db") $$ java.io.FileReader $$ possible exceptional exit due to db.readLine() with exception type java.io.IOException $$ ( 3164, 3208 ) $$ @MustCall method close may not have been invoked on new FileReader(table.getTable() + ".db") or any of its aliases.
		BufferedReader db = new BufferedReader(new FileReader(table.getTable()
		                                       ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to db.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/MqlParser.java:50: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(args[0]) $$ java.io.FileInputStream $$ regular method exit $$ ( 1453, 1481 ) $$ @MustCall method close may not have been invoked on new FileInputStream(args[0]) or any of its aliases.
        p = new MqlParser(new DataInputStream(new FileInputStream(args[0])));
                                              ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/parser/MysgbdParser.java:27: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(args[0]) $$ java.io.FileInputStream $$ regular method exit $$ ( 603, 631 ) $$ @MustCall method close may not have been invoked on new FileInputStream(args[0]) or any of its aliases.
                          new FileInputStream(args[0]))) ;
                          ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/data/Test.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader("test.db") $$ java.io.FileReader $$ possible exceptional exit due to db.readLine() with exception type java.io.IOException $$ ( 391, 416 ) $$ @MustCall method close may not have been invoked on new FileReader("test.db") or any of its aliases.
	      BufferedReader db = new BufferedReader(new FileReader("test.db"));
	                                             ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to db.readLine() with exception type java.io.IOException
../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/org/sgbd/Mysgbd/data/Test.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader("test.sql") $$ java.io.FileReader $$ possible exceptional exit due to sql.readLine() with exception type java.io.IOException $$ ( 691, 717 ) $$ @MustCall method close may not have been invoked on new FileReader("test.sql") or any of its aliases.
	        BufferedReader sql = new BufferedReader(new FileReader("test.sql")); 
	                                                ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to sql.readLine() with exception type java.io.IOException
Note: ../dataset/june2020_dataset/url7a69e77641_benmouh_MySgbd_tgz-pJ8-Demo_CheckRowNumJ8/src/Demo/CheckRowNum.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
